2003-10-13  Not Zed  <NotZed@Ximian.com>

	* em-folder-selection.c (em_select_folder): asynchornous folder
	selection call.
	(emfs_folder_selected): callback for folder selected.

	* em-folder-view.c (emfv_popup_move): implement.
	(emfv_popup_copy): "
	(emfv_popup_move_cb): async folder select callback to run it.

2003-10-10  Not Zed  <NotZed@Ximian.com>

	* mail-account-gui.c
	(mail_account_gui_folder_selector_button_new): use
	em_folder_selection_button.
	(mail_account_gui_new): "
	(folder_selected): "

	* em-folder-selection-button.c: Make this use camel uri's rather
	than camelfolders.
	(set_selection): removed, redundant.
	(impl_dispose): removed, not needed.

	* em-folder-selection-button.h: change the selected signal not to
	actually return the selection, which must get retrieved later.

	* mail-component.c (em_uri_from_camel): create an evo mail uri
	from a camel one.
	(em_uri_to_camel): the reverse.

	* mail-signature-editor.c (mail_signature_editor): up the version
	of the gtkhtml editor.

2003-10-09  Not Zed  <NotZed@Ximian.com>

	* em-folder-selection-button.c (set_selection): always set
	selected_folder, otherwise we don't unset it properly.

	* em-folder-selection.c (em_folder_selection_run_dialog): fix a
	small memleak.
	(em_folder_selection_run_dialog_uri): do the same as run_dialog
	but take, and return physical uri's.

	* mail-component-factory.c (factory): removed some fixme's, and
	re-hookedup the composer.

2003-10-09  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* em-icon-stream.c: (emis_sync_close):
        Use gnome-thumbnail_scale_down_pixbuf if available,
        for better performance.

2003-10-08  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-view.c: Add a hide_mask to the
	create-rule-from-message bars so that we don't segfault when we
	right click with a multi-selection.

2003-10-08  Chris Toshok  <toshok@ximian.com>

	* em-utils.c (em_utils_camel_address_to_destination): EDestination